cmake_minimum_required(VERSION 3.4...3.19)
set(ex1_SRC ex1.cpp)
set(ex1_HEADER )

ADD_EXECUTABLE (ex1 ${ex1_SRC} )

# ${DECNUMBER__EXTERNAL_PACKAGE_LIBNM}
if(ORM_HAS_DECNUM)
TARGET_LINK_LIBRARIES(ex1 utf ${FORCE_DECNUMBERLIB_NM} sqlnum ${Boost_LIBRARIES} ${ORM_PLATFORM_ODBCLIB} ${ODBC_LIBRARIES})
else(ORM_HAS_DECNUM)
TARGET_LINK_LIBRARIES(ex1 utf  cpporm${Boost_LIBRARIES} ${ORM_PLATFORM_ODBCLIB} ${ODBC_LIBRARIES})
endif(ORM_HAS_DECNUM)
